src/test/deca/syntax/parser/invalid/class_extends_wrong_keyword_if.deca
// Parser test, keyword "if" instead of "extends"

class A {

}

class B if A {

}